--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node index.js",
+    "start:dev": "nodemon contacts.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/alexvile/goit-node-hw-01/issues"
   },
-  "homepage": "https://github.com/alexvile/goit-node-hw-01#readme"
+  "homepage": "https://github.com/alexvile/goit-node-hw-01#readme",
+  "dependencies": {
+    "commander": "^9.4.1",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
