--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/alexvile/goit-node-hw-01#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "commander": "^9.4.1",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
